// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game should render SlotMachine and GameControls components 1`] = `
<div>
  <div
    data-testid="slot-machine"
  />
  <div
    data-testid="game-controls"
  />
</div>
`;

exports[`Game should render banner with win count if showWinAnimation set to true 1`] = `
<div
  data-testid="banner"
>
  +
  42
</div>
`;
